# TinyTroupe

./: .env.local  .gitattributes  .gitignore  MANIFEST.in  README.md  RESPONSIBLE_AI_FAQ.md  SUPPORT.md  build_and_install_package_from_repo.bat  generate_api_documentation.bat  install_package_from_repo.bat  pyproject.toml  test.bat  uninstall_package.bat
.github/workflows/: bandit.yml  codeql.yml
data/extractions/: appartment_rent_ad.extraction.json  appartment_rent_ad_1.extraction.json  synthetic_data_generation.out.csv
data/facts/: business-facts.synthetic.txt
examples/: advertisement_for_tv.ipynb  config.ini  create_ad_for_appartment.ipynb  creating_and_validating_agents.ipynb  interview_with_customer.ipynb  online_advertisement_for_travel.ipynb  product_brainstorming.ipynb  simple_chat.ipynb  synthetic_data_generation.ipynb  test_person.ipynb  wordprocessor_tool_usage.ipynb
examples/scratch/: tool_usage.ipynb
jiucai/: china_jiucai.ipynb  china_jiucai_test.ipynb  config.ini  docs_rename.ipynb  etl.ipynb  jiucai_world.ipynb  meeting_jiucai.ipynb  meeting_jiucai_001.ipynb  meeting_jiucai_002.ipynb  meeting_jiucai_003.ipynb  summarize.ipynb  test.ipynb
tests/: conftest.py  testing_utils.py  tinytroupe-cache-default.json
tests/non_functional/: test_security.py
tests/unit/: test_control.py  (+11 more)
tinytroupe/: __init__.py  agent.py  config.ini  control.py  enrichment.py  environment.py  examples.py  experimentation.py  extraction.py  factory.py  openai_utils.py  personchecker.py  personfactory.py  profiling.py  story.py  tools.py  utils.py  validation.py
(+56 files in other folders)
